[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameHUDRelated/Tooltips/SynergyTooltipRelated/SynDifficultyAssets/SynDifficulty_Indicator_GrayEmpty.png" type="Texture" id=1]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://GameHUDRelated/Tooltips/SynergyTooltipRelated/Subs/SynergyDifficultyPanel.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[node name="SynergyDifficultyPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 77.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 77.0
margin_bottom = 9.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
margin_right = 77.0
margin_bottom = 9.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Difficulty:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 77.0
margin_bottom = 26.0
custom_constants/separation = 3

[node name="DifficultyPic01" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 13.0
margin_bottom = 13.0
texture = ExtResource( 1 )

[node name="DifficultyPic02" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 29.0
margin_bottom = 13.0
texture = ExtResource( 1 )

[node name="DifficultyPic03" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 13.0
texture = ExtResource( 1 )

[node name="DifficultyPic04" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 61.0
margin_bottom = 13.0
texture = ExtResource( 1 )

[node name="DifficultyPic05" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 77.0
margin_bottom = 13.0
texture = ExtResource( 1 )
